--- a/docs/20_role/30_student.mdx
+++ b/docs/20_role/30_student.mdx
@@ -28,7 +28,7 @@ For the [documentation of these data](/docs/data/data_documentation), a classic 
 :::
 
 :::caution Considerations:              
-The use of a paper-based lab journal seems to be an easy and efficient way to [document data](/docs/data/data_documentation). But the use of an [ELN](/docs/topics/eln) like [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) has plenty of advantages in the long run. For example, in [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) all data obtained from an experiment can be linked to your protocol, which is an easy way to have a [well-organised research data set](/docs/data/data_organisation) at the end of the thesis. Additionally, the reaction protocol can be exported in a [standardised form](/docs/topics/format_standards), which is suitable for [publication](/docs/data/data_publication) in the experimental section of a thesis or a paper. <br/> Furthermore, the data are machine readable and therefore easily findable which is one aspect for [FAIR data](/docs/topics/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**eusable). Also the other aspects should be fulfilled, this increases the machine-actionability for future use of the data. Another advantage of an [ELN](/docs/topics/eln) is that it can be coupled with a [repositorium](/docs/topics/repositories), which will ease the [publication process](/docs/data/data_publication).
+The use of a paper-based lab journal seems to be an easy and efficient way to [document data](/docs/data/data_documentation). But the use of an [ELN](/docs/topics/eln) like [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) has plenty of advantages in the long run. For example, in [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) all data obtained from an experiment can be linked to your protocol, which is an easy way to have a [well-organised research data set](/docs/data/data_organisation) at the end of the thesis. Additionally, the reaction protocol can be exported in a [standardised form](/docs/topics/format_standards), which is suitable for [publication](/docs/data/data_publication) in the experimental section of a thesis or a paper. <br/> Furthermore, the data are machine readable and therefore easily findable which is one aspect for [FAIR data](/docs/topics/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**eusable). Also the other aspects should be fulfilled, this increases the machine-actionability for future use of the data. Another advantage of an [ELN](/docs/topics/eln) is that it can be coupled with a [repository](/docs/topics/repositories), which will ease the [publication process](/docs/data/data_publication). [Choose a repository](/docs/data/choose_repository), that is suitable for your data.
 :::
 
 
