chore: improve button alignment

--- a/docs/00_intro.mdx
+++ b/docs/00_intro.mdx
@@ -36,7 +36,7 @@ The knowledge base offers different points of entry that help you in navigating 
 
 The domain pages present an exemplary workflow for different chemistry disciplines along the research data life cycle. Multiple domains are illustrated in a user profile. Guidelines are provided for all digitisation steps involved and domain-specific best practices for FAIR data are given. Find out how to apply good RDM and FAIR science in the context of your own specific discipline.
 
-<div className="col feature--col">
+<div className="col intro--col">
     <div className="text--center vertical-center">
         <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/domains/guide')}>
             <img src={useBaseUrl('/img/domain_petrol.svg')} width="120px" />
@@ -51,7 +51,7 @@ The domain pages present an exemplary workflow for different chemistry disciplin
 
 The role pages focus on the motivation for role-specific requirements and answer the questions why RDM is important and how it can be implemented. Get a fast impression of all important RDM information related to your role.
 
-<div className="col feature--col">
+<div className="col intro--col">
     <div className="text--center vertical-center">
         <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/role/guide')}>
             <img src={useBaseUrl('/img/role_petrol.svg')} width="120px" />
@@ -70,7 +70,7 @@ The handling data section explains common problems and challenges regarding RDM.
 - technical implementations
 - further information and reading 
 
-<div className="col feature--col">
+<div className="col intro--col">
     <div className="text--center vertical-center">
         <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/data/dmp')}>
             <img src={useBaseUrl('/img/problem_petrol.svg')} width="120px" />
@@ -89,7 +89,7 @@ These pages contain general information on specific RDM topics and concepts expl
 - presentation of one or more suitable chemistry-specific examples
 - further information and reading 
 
-<div className="col feature--col">
+<div className="col intro--col">
     <div className="text--center vertical-center">
         <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/topics/fair')}>
             <img src={useBaseUrl('/img/topics_petrol.svg')} width="120px" />
@@ -105,7 +105,7 @@ The section on Lead by Example presents representative as well as substantially 
 
 Additionally, this list documents the process of evolving FAIRness of chemistry research data, surfaces practical issues and gives suggestions for improvements to be fed back to other projects within NFDI4Chem.
 
-<div className="col feature--col">
+<div className="col intro--col">
     <div className="text--center vertical-center">
         <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/lead-by-example')}>
             <img src={useBaseUrl('/img/role_petrol.svg')} width="120px" />
