--- a/docs/20_role/10_research_group_leader.mdx
+++ b/docs/20_role/10_research_group_leader.mdx
@@ -12,7 +12,7 @@ This article applies to research group leaders, who plan to organise the RDM of 
 
 <img alt="Data LifeCycle" src={useBaseUrl('/img/Intro/N4C_DataLifecycle.svg')} width="500" align="right" vspace="10" hspace="10"/>
 
-As research group leader, you are responsible for the [research data organisation](/docs/data/data_organisation) of your group. Many research institutions and also most funding institutions require or give internal RDM guidelines (e.g. [DFG checklist](https://www.dfg.de/download/pdf/foerderung/grundlagen_dfg_foerderung/forschungsdaten/forschungsdaten_checkliste_de.pdf), BMBF, EU guidelines) and recommend the set-up of [data management plans](/docs/data/dmp) in order to ensure that the data are archived in a [FAIR](/docs/topics/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable) manner. Many funding institutions encourage or even enforce the [publication](../30_data/60_data_publication.mdx) of FAIR data.
+As research group leader, you are responsible for the [research data organisation](/docs/data/data_organisation) of your group. Many research institutions and also most funding institutions require or give internal RDM guidelines (e.g. [DFG checklist](https://www.dfg.de/download/pdf/foerderung/grundlagen_dfg_foerderung/forschungsdaten/forschungsdaten_checkliste_de.pdf), BMBF, EU guidelines) and recommend the set-up of [data management plans](/docs/data/dmp) in order to ensure that the data are archived in a [FAIR](/docs/topics/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable) manner. Many funding institutions encourage or even enforce the [publication](/docs/data/data_publication) of FAIR data.
 
 In recent years, many new digital tools have been developed to support researchers in their RDM needs. The technical possibilities are briefly outlined below. For more details, please refer to the related chapters, many of which are directly linked.
 
