--- a/docs/20_role/10_research_group_leader.mdx
+++ b/docs/20_role/10_research_group_leader.mdx
@@ -10,20 +10,26 @@ This article applies to research group leaders, who plan to organise the RDM of 
 
 ## Motivation
 
-<img alt="Data LifeCycle" src={useBaseUrl('/img/Intro/N4C_DataLifecycle.svg')} width="500" align="right" vspace="10" hspace="10"/>
+<img id="datalife" alt="Data LifeCycle" src={useBaseUrl('/img/Intro/N4C_DataLifecycle.svg')} width="500" align="right" vspace="10" hspace="10" />
 
 As research group leader, you are responsible for the [research data organisation](/docs/data/data_organisation) of your group. Many research institutions and also most funding institutions require or give internal RDM guidelines (e.g. [DFG checklist](https://www.dfg.de/download/pdf/foerderung/grundlagen_dfg_foerderung/forschungsdaten/forschungsdaten_checkliste_de.pdf), BMBF, EU guidelines) and recommend the set-up of [data management plans](/docs/data/dmp) in order to ensure that the data are archived in a [FAIR](/docs/topics/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable) manner. Many funding institutions encourage or even enforce the [publication](/docs/data/data_publication) of FAIR data.
 
 In recent years, many new digital tools have been developed to support researchers in their RDM needs. The technical possibilities are briefly outlined below. For more details, please refer to the related chapters, many of which are directly linked.
 
-With regard to the [data life cycle](/docs/topics/data_life_cycle) (figure below), digitalisation of the acquired research data at the end of the production process is the most tedious strategy. It is more efficient to capture the data and their corresponding [metadata](/docs/topics/metadata) during the planning of the experiment. Here, [electronic lab notebooks (ELN)](/docs/topics/eln) facilitate everyday work considerably: the planning of the experiment, the analysis of the obtained spectroscopic data as well as the peak assignment can all be completed in one digital environment. And even better: the peak lists (e.g. for the supporting information for [publications](/docs/data/data_publication)) for the reporting can be generated automatically by the ELN. The time invested to set up the ELN and to organise the experiments thus pays off in numerous ways: besides the facilitated [documentation](/docs/data/data_documentation), the deposition of the produced data in a FAIR format into a [repository](/docs/topics/repositories) is simplified and the [data organisation](/docs/data/data_organisation) for the research group can be enhanced by building an internal database. This is invaluable for growing working groups.
+:::danger Consider
+Digitisation of research data only **after** the end of the production process is most tedious and time-consuming.
+:::
+
+Therefore, it is more efficient to capture the data and their corresponding [metadata](/docs/topics/metadata) as early as from the planning of the experiment. Here, [electronic lab notebooks (ELN)](/docs/topics/eln) facilitate everyday work considerably: the planning of the experiment, the documentation of experimental procedures, the analysis of the obtained spectroscopic data as well as the peak assignment can all be completed in one digital environment. And even better: complete experiment reports with analytical data (e.g. for the supporting information for [publications](/docs/data/data_publication)) can be generated automatically by the ELN.
+
+The time invested to set up the ELN and to organise the experiments thus pays off in numerous ways: In addition to facilitating [documentation](/docs/data/data_documentation), the storage of the produced data in a FAIR format in a [repository](/docs/topics/repositories) is simplified. Also, the [data organisation](/docs/data/data_organisation) for the research group can be improved by setting up an internal database. This is invaluable for growing working groups.
 
 ## How to start
 
 The choice of ELN and of the repository for the data deposition depends on the chemical sub-domain. Please have a look at the [user profiles](/docs/domains/guide) for domain-specific details.
 Moreover, the [best practice examples](/docs/topics/best_practice) can help visualise how efficient RDM works.
 
-60 % of chemists work synthetically, hence, the advantages of using the ELN [Chemotion](https://eln.chemotion.net/home) as a whole working group include:
+Of all chemists, 60 % work synthetically. Here, the advantages of using the ELN [Chemotion](https://eln.chemotion.net/home) as a whole working group include:
 
 - directly capturing data in the experiment planning phase, therefore fostering data management from the beginning of experimental work
 - many spectra can be directly analysed in the Chemotion environment using [ChemSpectra](https://eln.chemotion.net/chemspectra-editor)
