--- a/docs/20_role/20_research_group_member.mdx
+++ b/docs/20_role/20_research_group_member.mdx
@@ -24,7 +24,9 @@ The most efficient way to properly handle your research data and corresponding [
 
 ## Recommendations – how to start
 
-The use of an ELN for data handling has clear advantages (see [above](#data-handling)). Generally, selecting an [ELN](../40_topics/10_eln.mdx) and a [repository](../40_topics/20_repositories.mdx) for data deposition depends on the [chemical sub-domain](../10_domains/00_guide.mdx). Since 60 % of the chemists work synthetically, the electronic lab notebook [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/) in combination with the repository [Chemotion Repository](https://www.chemotion-repository.net/welcome) may be the right choice for you. Some advantages of using Chemotion as a whole include:
+The use of an ELN for data handling has clear advantages (see [above](#data-handling)). Generally, selecting an [ELN](../40_topics/10_eln.mdx) and a [repository](../40_topics/20_repositories.mdx) for data deposition depends on the [chemical sub-domain](../10_domains/00_guide.mdx). Since 60 % of the chemists work synthetically, the electronic lab notebook [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/) in combination with the repository [Chemotion Repository](https://www.chemotion-repository.net/welcome) may be the right choice for you. 
+
+:::tip Advantages of Chemotion
 
 - [Data life cycle](../40_topics/110_data_life_cycle.mdx) fully covered—from experiment planning to publication
 - Drawing chemical structures—automatic calculation of quantities and yields
@@ -36,6 +38,15 @@ The use of an ELN for data handling has clear advantages (see [above](#data-hand
 - Seamless export from ELN to repository as a FAIR data deposit with a [persistent identifier (DOI)](../40_topics/100_pid.mdx) for each molecule
 - User management—access rights, sharing, and syncing.
 - Academic version is free of charge
-- When running your own Chemotion instance, you keep control of your data.
 
-For more information on Chemotion, the [Chemotion introductory video](https://www.youtube.com/watch?v=tZHaP6DW-Dw) (in German) provides a good overview of Chemotion as a tool in research data management. No matter if you are working with Chemotion, another [ELN](../40_topics/10_eln.mdx), or a traditional handwritten notebook, the data need to be stored in a repository according to the [FAIR principles](../40_topics/01_fair.mdx). If you are not using the Chemotion ELN, you can still deposit your data in the Chemotion Repository. In addition, a plethora of [repositories](../40_topics/20_repositories.mdx) exist in chemistry, some of which are sub-domain specific, such as [MassBank](https://massbank.eu/MassBank/) for mass spectrometry data.
+**When running your own Chemotion instance, you keep control of your data.**
+
+:::
+
+:::info Info:
+
+For more information on Chemotion, the [Chemotion introductory video](https://www.youtube.com/watch?v=tZHaP6DW-Dw) (in German) provides a good overview of Chemotion as a tool in research data management. 
+
+:::
+
+No matter if you are working with Chemotion, another [ELN](../40_topics/10_eln.mdx), or a traditional handwritten notebook, the data need to be stored in a repository according to the [FAIR principles](../40_topics/01_fair.mdx). If you are not using the Chemotion ELN, you can still deposit your data in the Chemotion Repository. In addition, a plethora of [repositories](../40_topics/20_repositories.mdx) exist in chemistry, some of which are sub-domain specific, such as [MassBank](https://massbank.eu/MassBank/) for mass spectrometry data.
