T&C Guide-articles overview

--- a/docs/40_topics/00_guide.mdx
+++ b/docs/40_topics/00_guide.mdx
@@ -14,3 +14,27 @@ Finding relevant articles based on IUPAC names or trivial names of molecules is 
 
 [Data format standards](/docs/topics/format_standards) are important for all research data.
 Knowing the core concepts of [ontologies](/docs/topics/ontology) in one's research domain is helpful in a FAIR research data management context.
+
+
+<details>
+  <summary>Click to expand for all topics and concepts!</summary>
+  
+ <h3>Topics & Concepts</h3>
+ 
+<a href="/docs/topics/fair">FAIR Data Principles</a>
+<a href="/docs/topics/eln">Electronic Lab Notebooks (ELNs)</a>
+<a href="/docs/topics/repositories">Repositories</a>
+<a href="/docs/topics/metadata">Metadata and Minimum Information</a>
+<a href="/docs/topics/format_standards">Data format standard</a>
+<a href="/docs/topics/ontology">Ontology</a>
+<a href="/docs/topics/best_practice">Best Practice</a>
+<a href="/docs/topics/machine-readable_chemical_structures">Machine-Readable Chemical Structures</a>
+<a href="/docs/topics/ct_files">Chemical Table File Formatss</a>
+<a href="/docs/topics/inchi">InChI</a>
+<a href="/docs/topics/smiles">SMILES</a>
+<a href="/docs/topics/pid">Persistent Identifiers (PIDs)</a>
+<a href="/docs/topics/data_life_cycle">Research Data Life Cycle</a>
+<a href="/docs/topics/data_availability_statement">Data Availability Statement</a>
+
+</details>
+
