--- a/docs/40_topics/00_guide.mdx
+++ b/docs/40_topics/00_guide.mdx
@@ -21,20 +21,20 @@ Knowing the core concepts of [ontologies](/docs/topics/ontology) in one's resear
   
  <h3>Topics & Concepts</h3>
  
-<a href="/docs/topics/fair">FAIR Data Principles</a>
-<a href="/docs/topics/eln">Electronic Lab Notebooks (ELNs)</a>
-<a href="/docs/topics/repositories">Repositories</a>
-<a href="/docs/topics/metadata">Metadata and Minimum Information</a>
-<a href="/docs/topics/format_standards">Data format standard</a>
-<a href="/docs/topics/ontology">Ontology</a>
-<a href="/docs/topics/best_practice">Best Practice</a>
-<a href="/docs/topics/machine-readable_chemical_structures">Machine-Readable Chemical Structures</a>
-<a href="/docs/topics/ct_files">Chemical Table File Formatss</a>
-<a href="/docs/topics/inchi">InChI</a>
-<a href="/docs/topics/smiles">SMILES</a>
-<a href="/docs/topics/pid">Persistent Identifiers (PIDs)</a>
-<a href="/docs/topics/data_life_cycle">Research Data Life Cycle</a>
-<a href="/docs/topics/data_availability_statement">Data Availability Statement</a>
+<a href="/docs/topics/fair">FAIR Data Principles</a> <br />
+<a href="/docs/topics/eln">Electronic Lab Notebooks (ELNs)</a> <br />
+<a href="/docs/topics/repositories">Repositories</a> <br />
+<a href="/docs/topics/metadata">Metadata and Minimum Information</a> <br />
+<a href="/docs/topics/format_standards">Data format standard</a> <br />
+<a href="/docs/topics/ontology">Ontology</a> <br />
+<a href="/docs/topics/best_practice">Best Practice</a> <br />
+<a href="/docs/topics/machine-readable_chemical_structures">Machine-Readable Chemical Structures</a> <br />
+<a href="/docs/topics/ct_files">Chemical Table File Formatss</a> <br />
+<a href="/docs/topics/inchi">InChI</a> <br />
+<a href="/docs/topics/smiles">SMILES</a> <br />
+<a href="/docs/topics/pid">Persistent Identifiers (PIDs)</a> <br />
+<a href="/docs/topics/data_life_cycle">Research Data Life Cycle</a> <br />
+<a href="/docs/topics/data_availability_statement">Data Availability Statement</a> <br />
 
 </details>
 
