--- a/docs/30_data/40_data_documentation.mdx
+++ b/docs/30_data/40_data_documentation.mdx
@@ -1,9 +1,8 @@
 ---
 title: "Data Documentation"
-description: description of everything that "your future-self" would need to know
-page_id: data_documentation
-related_pages:
-	data: [data_organisation, data_storage]
+nfdi4chem-description: description of everything that "your future-self" would need to know
+nfdi4chem-id: data_documentation
+nfdi4chem-tags: [data_organisation, data_storage, repositories]
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
