--- a/docs/40_topics/20_repositories.mdx
+++ b/docs/40_topics/20_repositories.mdx
@@ -1,9 +1,8 @@
 ---
 title: "Repositories"
-description: storage for preformatted data
-page_id: repositories
-related_pages:
-	problems: [data_documentation, data_storage]
+nfdi4chem-description: storage for preformatted data
+nfdi4chem-id: repositories
+nfdi4chem-tags: [data_organisation, data_storage, repositories]
 ---
 
 ## Introduction
