first tests using more or less dynamic content, methods.yml does not work due to server side rendering

--- a/docs/10_domains/10_synthetic_chemistry.mdx
+++ b/docs/10_domains/10_synthetic_chemistry.mdx
@@ -44,7 +44,7 @@ The main goal of a synthetic organic or inorganic chemist is to synthesise desir
 - Digital data are obtained with analytical devices. An overview on file extensions, file sizes and converters for several analytical methods is given in the table below.
 - Raw data files in [proprietary file formats](/docs/topics/format_standards) should be saved alongside interoperable [open file formats](/docs/topics/format_standards) by using converters or the software of the analytical device. If no specific open format is currently available, export as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
 
-<NFDI4ChemMethods />
+<NFDI4ChemMethods methods_to_show={["all"]} />
 
 :::note *This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
