--- a/docs/10_domains/_methods_table.mdx
+++ b/docs/10_domains/_methods_table.mdx
@@ -1,3 +1,14 @@
+import NFDI4ChemKBMethodsTable from './methods.js';
+
+:::note dynamic table (testing)
+:::
+
+<NFDI4ChemKBMethodsTable methods_to_show={props.methods_to_show}/>
+
+
+:::note static full table
+:::
+
 |Analytical method|Exemplary proprietary file extensions|Typical size of proprietary file|Converter to open file format|Recommendation for open file extension*|File format|File size of open format|
 |:------------|:------------|:------------|:------------|:------------|:------------|:------------|
 |NMR spectroscopy|*set of files, no typical extension*|<1-50 MB| [nmrium.org](https://www.nmrium.org/) |.jdx<br/>.zip<br/>|JCAMP-DX *(raw)*<br/>NMReDATA *(assignments)*|<1-50 MB|
