fix: intro icons

--- a/docs/00_intro.mdx
+++ b/docs/00_intro.mdx
@@ -39,7 +39,7 @@ The domain pages present an exemplary workflow for different chemistry disciplin
 <div className="col intro--col">
     <div className="text--center vertical-center">
         <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/domains/guide')}>
-            <img src={useBaseUrl('/img/domain_petrol.svg')} width="120px" />
+            <img src={useBaseUrl('/img/nfdi4chem_Domains.svg')} width="120px" />
             <br />
             Domains
         </a>
@@ -54,7 +54,7 @@ The role pages focus on the motivation for role-specific requirements and answer
 <div className="col intro--col">
     <div className="text--center vertical-center">
         <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/role/guide')}>
-            <img src={useBaseUrl('/img/role_petrol.svg')} width="120px" />
+            <img src={useBaseUrl('/img/nfdi4chem_Roles.svg')} width="120px" />
             <br />
             Roles
         </a>
@@ -73,7 +73,7 @@ The handling data section explains common problems and challenges regarding RDM.
 <div className="col intro--col">
     <div className="text--center vertical-center">
         <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/data/dmp')}>
-            <img src={useBaseUrl('/img/problem_petrol.svg')} width="120px" />
+            <img src={useBaseUrl('/img/nfdi4chem_Handling_Data.svg')} width="120px" />
             <br />
             Handling Data
         </a>
@@ -92,7 +92,7 @@ These pages contain general information on specific RDM topics and concepts expl
 <div className="col intro--col">
     <div className="text--center vertical-center">
         <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/topics/fair')}>
-            <img src={useBaseUrl('/img/topics_petrol.svg')} width="120px" />
+            <img src={useBaseUrl('/img/nfdi4chem_Topics_and_Concepts.svg')} width="120px" />
             <br />
             Topics & Concepts
         </a>
@@ -108,7 +108,7 @@ Additionally, this list documents the process of evolving FAIRness of chemistry 
 <div className="col intro--col">
     <div className="text--center vertical-center">
         <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/lead-by-example')}>
-            <img src={useBaseUrl('/img/role_petrol.svg')} width="120px" />
+            <img src={useBaseUrl('/img/nfdi4chem_Lead_by_Example.svg')} width="120px" />
             <br />
             Lead by Example
         </a>
