fix: broken links

--- a/docs/30_data/00_guide.mdx
+++ b/docs/30_data/00_guide.mdx
@@ -30,7 +30,7 @@ Learn how to organise your data, e.g. via appropriate file naming conventions an
 
 <div className="col intro--col">
     <div className="text--center vertical-center">
-        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/topics/data_organisation')}>
+        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/data/data_organisation')}>
             <img src={useBaseUrl('/img/nfdi4chem_Data_Organisation.svg')} width="120" />
             <br />
             Data Organisation
@@ -44,7 +44,7 @@ Find out more about the tools, resources and software that can support you with 
 
 <div className="col intro--col">
     <div className="text--center vertical-center">
-        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/topics/data_documentation')}>
+        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/data/data_documentation')}>
             <img src={useBaseUrl('/img/nfdi4chem_Data_Management_Plan.svg')} width="120" />
             <br />
             Documentation
@@ -58,7 +58,7 @@ Storing and and archiving your data needs to be carefully considered. How many c
 
 <div className="col intro--col">
     <div className="text--center vertical-center">
-        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/topics/data_storage')}>
+        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/data/data_storage')}>
             <img src={useBaseUrl('/img/nfdi4chem_Data_Storage_and_Archiving.svg')} width="120" />
             <br />
             Data Storage and Archiving
@@ -72,7 +72,7 @@ Want to make your data available to others? Not quite sure how or where to publi
 
 <div className="col intro--col">
     <div className="text--center vertical-center">
-        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/topics/data_publication')}>
+        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/data/data_publication')}>
             <img src={useBaseUrl('/img/nfdi4chem_Data_Publication.svg')} width="120" />
             <br />
             Data Publication
@@ -86,7 +86,7 @@ Not sure which repository is the right one for your data? Find out more about se
 
 <div className="col intro--col">
     <div className="text--center vertical-center">
-        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/topics/choose_repository')}>
+        <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/data/choose_repository')}>
             <img src={useBaseUrl('/img/nfdi4chem_How_to_choose_the_right_repository.svg')} width="120" />
             <br />
             How to choose the right repo
