fix: broken svg url

--- a/docs/00_intro.mdx
+++ b/docs/00_intro.mdx
@@ -92,7 +92,7 @@ These pages contain general information on specific RDM topics and concepts expl
 <div className="col intro--col">
     <div className="text--center vertical-center">
         <a className="button button--secondary button--lg feature-secondary--button" href={useBaseUrl('/docs/topics/fair')}>
-            <img src={useBaseUrl('/img/topics_petrol.svg')} width="120px" />
+            <img src={useBaseUrl('/img/nfdi4chem_Topics_and_Concepts.svg')} width="120px" />
             <br />
             Topics & Concepts
         </a>
