--- a/docs/50_lead-by-example.mdx
+++ b/docs/50_lead-by-example.mdx
@@ -19,14 +19,13 @@ Do you want to have your published dataset highlighted here or do you need assis
 |Author(s)|Title|Repository and DOI of dataset|Curator(s)|Description of dataset|
 |---|---|---|---|---|
 |Robin M. Bär, Lukas Langer, Martin Nieger, Stefan Bräse|[Bicyclo\[1.1.1\]pentyl sulfoximines: synthesis and functionalizations](https://doi.org/10.1002/adsc.201901453)|[Chemotion Repository](https://dx.doi.org/10.14272/NMNCNBZSKZJASF-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/DMHUHEHJOBWIMO-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/PHPYRTSEAMTSEI-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/PLJOXMUHAAQZQY-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/UAZVVKAIALHHII-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/LFQXFMHDVUMDRF-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/AICNJBZHCMEDFX-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/NEKGDCIKXKJMQB-UHFFFAOYSA-N.2)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/XVYUYMKGDFPRBJ-UHFFFAOYSA-N.2)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/JPDHSBXYSZUVMX-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/XPZLSBJQMZMCMC-UHFFFAOYSA-N.1)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hkz5)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl07)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl18)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl29)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl3b)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl4c)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl5d)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23hl6f)|curated by publishing authors|The datasets, curated by the publishing authors, contains NMR data in the instrument manufacturers formats and is also provided by Chemotion Repository in the open format JCAMP-DX. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting. information PDF of the corresponding article.|
-|Steffen Bochenek, Fabrizio Camerin, Emanuela Zaccarelli, Armando Maestro,
-Maximilian M. Schmidt, Walter Richtering, Andrea Scotti|[In-situ study of the impact of temperature and architecture on the interfacial structure of microgels](https://dx.doi.org/10.1038/s41467-022-31209-3)|[RADAR](https://dx.doi.org/10.22000/603)|Dataset  inludes raw, associated, and derived data supporting the reported results; methods: NR, DLS, AFM, SANS.RADAR DOI as well as ePIC for archived dataset (identical to published dataset) are given in the data availability statement. The RADAR DOI is also listed listed in the references. The NR raw data used in the study are available in the ILL Data Portal database under [accession](10.5291/ILL-DATA.9-11-187191) and [accession](10.5291/ILL-DATA.EASY-46292) (also listed in references and DAS).|
+|Steffen Bochenek, Fabrizio Camerin, Emanuela Zaccarelli, Armando Maestro, Maximilian M. Schmidt, Walter Richtering, Andrea Scotti|[In-situ study of the impact of temperature and architecture on the interfacial structure of microgels](https://dx.doi.org/10.1038/s41467-022-31209-3)|[RADAR](https://dx.doi.org/10.22000/603)|curated by publishing authors|The dataset  inludes raw, associated, and derived data supporting the reported results; methods: NR, DLS, AFM, SANS.RADAR DOI as well as ePIC for archived dataset (identical to published dataset) are given in the data availability statement. The RADAR DOI is also listed listed in the references. The NR raw data used in the study are available in the ILL Data Portal database under [accession](10.5291/ILL-DATA.9-11-187191) and [accession](10.5291/ILL-DATA.EASY-46292) (also listed in references and DAS).|
 |Toni Ditfe, Eileen Bette, Haider N. Sultani, Alexander Otto, Ludger A. Wessjohann, Norbert Arnold, Bernhard Westermann|[Synthesis and biological evaluation of highly potent fungicidal deoxy-hygrophorones](https://doi.org/10.1002/ejoc.202100729)|[RADAR](https://doi.org/10.22000/451)|Tillmann G. Fischer (IPB)|The dataset, prepared for publication under NFDI4Chem stewardship and published in RADAR, contains NMR and MS data in the instrument manufacturers formats as well as in open formats such as JCAMP-DX, NMReDATA for NMR data and mzML for MS data. Results from the bioassay are available as CSV. Additionally, all structures are provided as CTfiles and are listed, corresponding to their numbering in the publication, in an CSV including IPB 3LC lab journal entries, SMILES structure codes and InChI and InChIkey identifiers. The corresponding article references the dataset in the section on supporting information.|
 |Saskia Finckh, Liza-Marie Beckers, Wibke Busch, Eric Carmona, Valeria Dulio, Lena Kramer, Martin Krauss, Leo Posthuma, Tobias Schulze, Jaap Slootweg, Peter C. von der Ohe, Werner Brack|[A risk based assessment approach for chemical mixtures from wastewater treatment plant effluents](https://doi.org/10.1016/j.envint.2022.107234)|[Pangaea](https://doi.pangaea.de/10.1594/PANGAEA.940755)|curated by the publishing authors|The dataset includes results data, raw mass spectral files, and processing data (MZmine, MZquant, Tracefinder). Pangaea is a repository for geospatial data and enviromental chemistry. The publication contains a supplemental [word document](https://ars.els-cdn.com/content/image/1-s2.0-S016041202200160X-mmc1.docx) and [spreadsheet](https://ars.els-cdn.com/content/image/1-s2.0-S016041202200160X-mmc2.xlsx).|
 |Shuxia Guo et al.|[Comparability of Raman spectroscopic configurations: A large scale cross-laboratory study](https://doi.org/10.1021/acs.analchem.0c02696)|[Zenodo](https://zenodo.org/record/4152953)|curated by publishing authors|Slightly processed raw data for the paper 'Comparability of Raman Spectroscopic Configurations: A Large Scale Cross-Laboratory Study': The processing include a spike removal to allow an interpolation to a common wavenumber axis. Always three files belong to each other: wavenumber axis file (wx_XYZ), spectral intensity file (spec_XYZ) and metadata file (meta_XYZ). The ‘XYZ’ refers to the samples measured (see the publication and its SI for details).|
 |Meike Hahn, Eric von Elert, Laurent Bigler, M. Dolores Díaz Hernández, Nils E. Schloerer|[5α‐Cyprinol sulfate: complete NMR assignment and revision of earlier published data, including the submission of a computer‐readable assignment in NMReDATA format](https://doi.org/10.1002/mrc.4782)|[NMRShiftDB2](https://doi.org/10.18716/nmrshiftdb2/60004113/nmredata_mrc_cd3od)|curated by publishing authors|The dataset, curated by the publishing authors, is published in NMRShiftDB2 and also available from the publisher as supporting information. References to the dataset is given via DOI in the supporting information word document.|
-|Joshua Heck, Fabian Metz, Sören Buchenau, Melissa Teubner, Benjamin Grimm-Lebsanft, Thomas P. Spaniol, Alexander Hoffmann, Michael A. Rübhausen, Sonja Herres-Pawlis|[Manipulating electron transfer – the influence ofsubstituents on novel copper guanidine quinolinyl complexes](https://doi.org/10.1039/D2SC02910C)|[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-JHIAOWGCGN-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-XNDIRRNFWB-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-YSUUDYJLPD-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-MTPUXEIATO-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-DYIBODSCVM-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-YSUUDYJLPD-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-BRNGTXITIQ-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-ACOFZHHYLN-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-YKNRUBPOGQ-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-ZJSFNHZUYT-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-HXVOLPKNEJ-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-FYZDDQVKLM-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-AOATVJLAFL-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-XTTRESRELV-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-MCYXBNUZMI-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-NNDILYOKJA-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-DMWOEMCLSH-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-JZHZQROLCJ-UHFFFADPSC-NUHFF-MUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-FNFSJYCLRP-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-UMMQIWZYOP-UHFFFADPSC-NUHFF-LUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-GCLZBRQZKM-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-XYXSWFSTLI-UHFFFADPSC-NUHFF-LUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-JBXRXORXEO-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-GQFHEVHUGU-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-UMXPYYQOWK-UHFFFADPSC-NUHFF-LUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-JQDGMCVIMF-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-DRQHCTISPL-UHFFFADPSC-NUHFF-LUHFF-NUHFF-ZZZ<br/>[RADAR](https://dx.doi.org/10.22000/613)|Curated by publishing authors|Dataset includes reactions, sample data (ATR-FTIR, HR-ESI-TOF-MS,  1N/13C-NMR), and density functional theory (DFT) data. The publication contains a [supplemental PDF](https://www.rsc.org/suppdata/d2/sc/d2sc02910c/d2sc02910c1.pdf) and [crystal structure data](https://www.rsc.org/suppdata/d2/sc/d2sc02910c/d2sc02910c2.cif). The reactions and samples are deposited on Chemotion Repository and the DFT data on RADAR.|
-|Judith Elizabeth Houston, Lisa Fruhner, Alexis de la Cotte, Javier Rojo González, Alexander Valerievich Petrunin, Urs Gasser, Ralf Schweins, Jürgen Allgaier, Walter Richtering, Alberto Fernandez-Nieves, Andrea Scotti|[Resolving the different bulk moduli within individual soft nanogels using small-angle neutron scattering](https://doi.org/10.1126/sciadv.abn6129)|[RADAR](https://dx.doi.org/10.22000/604)|curated by the puplishing authors|Dataset includes SANS data. The link (not DOI) is inlcuded in the published article's data availability statement as well as a DOI to further [SANS data](http://dx.doi.org/10.5291/ILL-DATA.9-11-2067). 
+|Joshua Heck, Fabian Metz, Sören Buchenau, Melissa Teubner, Benjamin Grimm-Lebsanft, Thomas P. Spaniol, Alexander Hoffmann, Michael A. Rübhausen, Sonja Herres-Pawlis|[Manipulating electron transfer – the influence ofsubstituents on novel copper guanidine quinolinyl complexes](https://doi.org/10.1039/D2SC02910C)|[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-JHIAOWGCGN-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-XNDIRRNFWB-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-YSUUDYJLPD-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-MTPUXEIATO-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-DYIBODSCVM-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-YSUUDYJLPD-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-BRNGTXITIQ-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-ACOFZHHYLN-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-YKNRUBPOGQ-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-ZJSFNHZUYT-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-HXVOLPKNEJ-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-FYZDDQVKLM-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-AOATVJLAFL-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-XTTRESRELV-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-MCYXBNUZMI-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-NNDILYOKJA-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-DMWOEMCLSH-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-JZHZQROLCJ-UHFFFADPSC-NUHFF-MUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-FNFSJYCLRP-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-UMMQIWZYOP-UHFFFADPSC-NUHFF-LUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-GCLZBRQZKM-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-XYXSWFSTLI-UHFFFADPSC-NUHFF-LUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-JBXRXORXEO-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-GQFHEVHUGU-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-UMXPYYQOWK-UHFFFADPSC-NUHFF-LUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-JQDGMCVIMF-UHFFFADPSC-NUHFF-NUHFF-NUHFF-ZZZ)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/reaction/SA-FUHFF-UHFFFADPSC-DRQHCTISPL-UHFFFADPSC-NUHFF-LUHFF-NUHFF-ZZZ)<br/>[RADAR](https://dx.doi.org/10.22000/613)|Curated by publishing authors|The dataset includes reactions, sample data (ATR-FTIR, HR-ESI-TOF-MS,  1N/13C-NMR), and density functional theory (DFT) data. The publication contains a [supplemental PDF](https://www.rsc.org/suppdata/d2/sc/d2sc02910c/d2sc02910c1.pdf) and [crystal structure data](https://www.rsc.org/suppdata/d2/sc/d2sc02910c/d2sc02910c2.cif). The reactions and samples are deposited on Chemotion Repository and the DFT data on RADAR.|
+|Judith Elizabeth Houston, Lisa Fruhner, Alexis de la Cotte, Javier Rojo González, Alexander Valerievich Petrunin, Urs Gasser, Ralf Schweins, Jürgen Allgaier, Walter Richtering, Alberto Fernandez-Nieves, Andrea Scotti|[Resolving the different bulk moduli within individual soft nanogels using small-angle neutron scattering](https://doi.org/10.1126/sciadv.abn6129)|[RADAR](https://dx.doi.org/10.22000/604)|curated by the puplishing authors|The dataset includes SANS data. The link (not DOI) is inlcuded in the published article's data availability statement as well as a DOI to further [SANS data](http://dx.doi.org/10.5291/ILL-DATA.9-11-2067). 
 |Carolin Huber, Erik Müller, Tobias Schulze, Werner Brack, Martin Krauss|[Improving the screening analysis of pesticide metabolites in human biomonitoring by combining high-throughput in vitro incubation and automated LC−HRMS data processing](https://doi.org/10.1021/acs.analchem.1c00972)|[MetaboLights](https://www.ebi.ac.uk/metabolights/MTBLS2402/metabolites)<br/>[MassBank-data](https://github.com/MassBank/MassBank-data/commit/691fe2429e33c883e56d5234277a6586a128cc5c)<br/>[GitHub](https://github.com/chufz/incubatoR)|curated by publishing authors|The dataset, curated by the publishing authors, contain MS data is published in MetaboLight, Massbank and MassBank-data at GitHub. All raw mass spectra were converted to mzML format. The used code is available at GitHub and were referenced in corresponding article.|
 |Linda Jütten, Karla Ramírez-Gualito, Andreas Weilhard, Benjamin albrecht, Gabriel Cuevas, María del Carmen Fernández-Alonso, Jesús Jiménez-Barbero, Nils E. Schlörer, Dolores Diaz|[Exploring the role of solvent on carbohydrate−aryl interactions by diffusion NMR-based studies](https://doi.org/10.1021/acsomega.7b01630)|[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004029)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004074)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004071)<br/>[NMRShifDB2](http://www.nmrshiftdb.org/molecule/60004072)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004073)|curated by publishing authors|The dataset was curated by the publishing authors and is published in NMRShiftDB2. References to the dataset is given via DOI in the supporting information PDF.|
 |Nils Keltsch, Viola Munzert, Klaus-Peter Zeller, Hans-Ullrich Siehl, Stefan Berger, Dieter Sicker|[Linderazulen aus einer invasiven Pflanze - Delphi und sein violettes Wunder](https://doi.org/10.1002/ciuz.201900868)|
