Fix missing entries

--- a/docs/50_lead-by-example.mdx
+++ b/docs/50_lead-by-example.mdx
@@ -28,7 +28,7 @@ Do you want to have your published dataset highlighted here or do you need assis
 |Judith Elizabeth Houston, Lisa Fruhner, Alexis de la Cotte, Javier Rojo González, Alexander Valerievich Petrunin, Urs Gasser, Ralf Schweins, Jürgen Allgaier, Walter Richtering, Alberto Fernandez-Nieves, Andrea Scotti|[Resolving the different bulk moduli within individual soft nanogels using small-angle neutron scattering](https://doi.org/10.1126/sciadv.abn6129)|[RADAR](https://dx.doi.org/10.22000/604)|curated by the puplishing authors|The dataset includes SANS data. The link (not DOI) is inlcuded in the published article's data availability statement as well as a DOI to further [SANS data](http://dx.doi.org/10.5291/ILL-DATA.9-11-2067). 
 |Carolin Huber, Erik Müller, Tobias Schulze, Werner Brack, Martin Krauss|[Improving the screening analysis of pesticide metabolites in human biomonitoring by combining high-throughput in vitro incubation and automated LC−HRMS data processing](https://doi.org/10.1021/acs.analchem.1c00972)|[MetaboLights](https://www.ebi.ac.uk/metabolights/MTBLS2402/metabolites)<br/>[MassBank-data](https://github.com/MassBank/MassBank-data/commit/691fe2429e33c883e56d5234277a6586a128cc5c)<br/>[GitHub](https://github.com/chufz/incubatoR)|curated by publishing authors|The dataset, curated by the publishing authors, contain MS data is published in MetaboLight, Massbank and MassBank-data at GitHub. All raw mass spectra were converted to mzML format. The used code is available at GitHub and were referenced in corresponding article.|
 |Linda Jütten, Karla Ramírez-Gualito, Andreas Weilhard, Benjamin albrecht, Gabriel Cuevas, María del Carmen Fernández-Alonso, Jesús Jiménez-Barbero, Nils E. Schlörer, Dolores Diaz|[Exploring the role of solvent on carbohydrate−aryl interactions by diffusion NMR-based studies](https://doi.org/10.1021/acsomega.7b01630)|[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004029)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004074)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004071)<br/>[NMRShifDB2](http://www.nmrshiftdb.org/molecule/60004072)<br/>[NMRShiftDB2](http://www.nmrshiftdb.org/molecule/60004073)|curated by publishing authors|The dataset was curated by the publishing authors and is published in NMRShiftDB2. References to the dataset is given via DOI in the supporting information PDF.|
-|Nils Keltsch, Viola Munzert, Klaus-Peter Zeller, Hans-Ullrich Siehl, Stefan Berger, Dieter Sicker|[Linderazulen aus einer invasiven Pflanze - Delphi und sein violettes Wunder](https://doi.org/10.1002/ciuz.201900868)|
+|Nils Keltsch, Viola Munzert, Klaus-Peter Zeller, Hans-Ullrich Siehl, Stefan Berger, Dieter Sicker|[Linderazulen aus einer invasiven Pflanze - Delphi und sein violettes Wunder](https://doi.org/10.1002/ciuz.201900868)|[RADAR](https://doi.org/10.22000/786)|Tillmann G. Fischer (IPB)|The dataset, prepared for publication under the NFDI4Chem stewardship and published in RADAR4Chem contains NMR, MS, UV/VIS and IR data. NMR data are provided in Bruker format, as JCAMP-DX (MNova) and NMRium format including NMReDATA (SDfile). MS data are also available in open format mzML. IR and UV/VIS data are accessible in tabular files and in JCAMP-DX format. The structure information on Linderazulene and further supplementary information are provided as tables and SDfile. The corresponding article does not reference to the dataset.|
 |Erik Müller, Carolin Huber, Liza-Marie Beckers, Werner Brack, Martin Krauss, Tobias Schulze|[A data et of 255,000 randomly selected and manually classified extracted ion chromatograms for evaluation of peak detection methods](https://www.mdpi.com/2218-1989/10/4/162)|[Zenodo](https://doi.org/10.5281/zenodo.6137082)<br/>[MetaboLights](https://www.ebi.ac.uk/metabolights/MTBLS1455)|curated by publishing authors|The dataset, curated by the publishing authors, contains 255.000 extracted ion chromatograms (EICs or XICs) of 5000 peaks randomly sampled from across 51 environmental water samples for the evaluation on peak detection and gap filling algorithms.|
 |Melanie Paul, Melissa Teubner, Benjamin Grimm-Lebsanft, Christiane Golchert, Yannick Meiners, Laura Senft, Kristina Keisers, Patricia Liebhäuser, Thomas Rösener, Florian Biebl, Sören Buchenau, Maria Naumova, Vadim Murzin, Roxanne Krug, Alexander Hoffmann, Jörg Pietruszka, Ivana Ivanovic-Burmazovic, Michael Rübhausen, Sonja Herres-Pawlis|[Exceptional substrate diversity in oxygenation reactions catalyzed by a bis(µ-oxo) copper comple](https://doi.org/10.1002/chem.202000664)|[Chemotion Repository](https://dx.doi.org/10.14272/FCAMUPIRWKNASD-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/XQWHZHODENELCJ-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/WYPRQDLUGJFJCG-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/SXYROFUQPFOADI-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/NLACLAPNGFWSTA-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/WOMQOOHUINDJRV-UHFFFAOYSA-M.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/SQELSYLGCLCOLU-UHFFFAOYSA-M.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/SEXRCKWGFSXUOO-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/JJGCDLVZJZGHBZ-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/ODJOHIWKLOPSFF-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/AEFJLSGXOWZNJZ-UHFFFAOYSA-N.1)<br/>[Chemotion Repository](https://dx.doi.org/10.14272/BMNLXKVRGRRHKW-UHFFFAOYSA-N.1)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23gtbr)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23gtcs)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23gtdt)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23gtfv)<br/>[CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc23wtb5)|curated by publishing authors|The datasets, curated by the publishing authors, contain NMR data in the instrument manufacturers formats and is also provided by Chemotion Repository in the open format JCAMP-DX. Crystallographic data as CIF files are available from CCDC. References to datasets are given in the supporting information. PDF of the corresponding article.|
 |Agneta Prasse, Viola Munzert, Elena José, Klaus-Peter Zeller, Hans-Ullrich Siehl, Stefan Berger, DieterSicker|[Die Polei-Minze im Wandel der Zeiten](https://doi.org/10.1002/ciuz.201800860)|[RADAR4Chem](https://doi.org/10.22000/785)|curated by Tillmann G. Fischer (IPB)|The dataset, prepared for publication under NFDI4Chem stewardship and published in RADAR4Chem, contains NMR, MS and UV/VIS data in the instrument manufacturers formats as well as in open formats such as JCAMP-DX for NMR and UV/VIS data and mzML for MS data. Analytical data of CD spectroscopy and MS spectrometry were exported as tabular files and are also provided as CSV files. The structure information on (R)-+-Pulegon and supplementary information are provided as in tabular files and as SDfile format. The corresponding article does not reference to the dataset.|
