minor fix in headlines

--- a/docs/50_lead-by-example.mdx
+++ b/docs/50_lead-by-example.mdx
@@ -176,7 +176,7 @@ Link(s) to dataset(s): [CCDC](https://dx.doi.org/10.5517/ccdc.csd.cc25v89m), [he
 
 The datasets, curated by the publishing authors, and published in heiData, contains data of NMR, MS, IR in the instrument manufacturers formats.The IR data is also available in TSV format. Elemental analysis data is provided as JPG. Crystallographic data as CIF are available from CCDC. References to datasets in CCDC are given in the supporting information PDF of the corresponding article.
 
-## A new generation of terminal copper nitrenes and their application in aromatic C–H amination reactions
+### A new generation of terminal copper nitrenes and their application in aromatic C–H amination reactions
 
 [Link to publication](https://doi.org/10.1039/D1DT00832C)
 
