chore: improvement of lbe presentation

--- a/docs/50_lead-by-example.mdx
+++ b/docs/50_lead-by-example.mdx
@@ -1,8 +1,9 @@
 ---
 title: "Lead by Example"
+hide_table_of_contents: true
 ---
 
-import Lbe from '../src/components/LeadByExample.js';
+import Lbe from '@site/src/components/LeadByExample.js';
 
 ## Introduction
 
