chore: clean up folder structure

--- a/docs/10_domains/10_synthetic_chemistry.mdx
+++ b/docs/10_domains/10_synthetic_chemistry.mdx
@@ -3,7 +3,7 @@ title: "Synthetic Organic/Inorganic Chemistry"
 nfdi4chem-id: dsoic
 ---
 
-import NFDI4ChemKBMethodsTable from './methods.js';
+import NFDI4ChemKBMethodsTable from '@site/src/components/methods.js';
 
 :::info Summary:
 
