--- a/docs/10_domains/20_analytical_chemistry.mdx
+++ b/docs/10_domains/20_analytical_chemistry.mdx
@@ -3,7 +3,7 @@ title: "Analytical Chemistry"
 nfdi4chem-id: dac
 ---
 
-import NFDI4ChemKBMethodsTable from './methods.js';
+import NFDI4ChemKBMethodsTable from '@site/src/components/methods.js';
 
 :::info Summary:
 
