--- a/docs/10_domains/20_analytical_chemistry.mdx
+++ b/docs/10_domains/20_analytical_chemistry.mdx
@@ -3,7 +3,7 @@ title: "Analytical Chemistry"
 nfdi4chem-id: dac
 ---
 
-import MethodsTableP from '@site/src/components/methods.js';
+import MethodsProfileTable from '@site/src/components/methodsProfile.js';
 
 :::info Summary:
 
@@ -62,7 +62,7 @@ A typical workflow begins with the conceptualisation of the research question, a
 - Digital data are obtained with analytical instruments. An overview of file extensions, file sizes, and converters for several analytical methods is given in the table below.
 - Raw data files in proprietary file formats should be saved alongside interoperable open file formats by using converters or the analytical device software. If no specific open format is currently available, export as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
 
-<MethodsTableP profile_to_show={"analytical"} />
+<MethodsProfileTable profile_to_show={"analytical"} />
 
 :::note *This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
