--- a/docs/10_domains/60_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/60_pharmaceutical_chemistry.mdx
@@ -2,6 +2,8 @@
 title: "Medicinal/Pharmaceutical Chemistry"
 ---
 
+import MethodsProfileTable from '@site/src/components/methodsProfile.js';
+
 :::info Summary:
 
 Medicinal chemistry is a chemistry-based, strongly interdisciplinary discipline. It deals with the discovery, development, identification, and synthesis of biologically active compounds, the interpretation of their mechanism of action at the molecular level, and the metabolism of the active compounds.
@@ -42,32 +44,7 @@ Using an ELN:
 - Digital data are obtained with analytical devices. An overview on file extensions, file sizes and converters for several analytical methods is given in the table below.
 - Raw data files in proprietary file formats should be saved alongside interoperable [open file formats](/docs/topics/format_standards) by using converters or the analytical device software. If no specific open format is currently available, an export as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
 
-|Analytical method|Exemplary proprietary file extensions|Typical size of proprietary file|Converter to open file format|Recommendation for open file extension*|File format|File size of open format|
-|:------------|:------------|:------------|:------------|:------------|:------------|:------------|
-|NMR spectroscopy|.fid|<1-50 MB|MNova<br/>Topspin|.jdx<br/>.zip<br/>|JCAMP-DX<br/>NMReDATA|~1 MB|
-|UV/vis spectroscopy|.dsw<br/> .str<br/>.bsk<br/>.bkn<br/>.ksd<br/>.jws<br/>.jwb<br/>.str8<br/>.spc<br/>.sre|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
-|IR spectroscopy|.ispd<br/>.icIR|<1 MB| |.dx|JCAMP-DX|<1 MB|
-|Raman spectroscopy|.dpt<br/>.spc<br/>.icRaman<br/>.sps<br/>.acs|<1 MB|proprietary software|.dx|JCAMP-DX|<1 MB|
-|Fluorescence spectroscopy|.fds<br/>.fs2f<br/>.jws<br/>.opj|<1 MB|proprietary software|.dx|JCAMP-DX|<1 MB|
-|Mass spectrometry|.raw<br/>.d<br/>.baf|~250 MB|Proteowizard|.mzML|mzML|~250 MB|
-|Gas chromatography|.gcd<br/>.d|~2 MB|proprietary software|.txt|text file|<1 MB|
-|HPLC-UV, HPLC-MS|.xls|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
-|Capillary electrophoresis| | | | | | |
-|Polarimetry| | | | | | |
-|Melting point or refractory index| | | | | | |
-|TLC: Rf values, TLC-UV, TLC-MS| | | | | | |
-|Binding assays (radioligand, fluorescence-based, surface plasmon resonance (SPR), microscale thermophoresis (MST), isothermal calorimetry (ICT), etc.)| | | | | | |
-|Activity assays (e.g. colorimetric, fluorescence-based, radioactive-based etc.)| | | | | | |
-|Docking calculations| | | | | | |
-|Cytotoxicity assays| | | | | | |
-|Determination of water solubility (pH 7.4; maybe at further pH values)| | | | | | |
-|Determination of logD value (lipophilicity)| | | | | | |
-|Peroral bioavailability (e.g. Caco-2 cell permeation assay)| | | | | | |
-|Brain permeation (in vitro prediction, in vivo)| | | | | | |
-|Metabolic stability (rat/mouse/human liver microsomes)| | | | | | |
-|Inhibition of the most important CYP P450 enzymes involved in drug metabolism to assess potential interactions| | | | | | |
-|hERG channel interaction| | | | | | |
-|Genotoxicity assays| | | | | | |
+<MethodsProfileTable profile_to_show={"pharma"} />
 
 :::note *This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
